# llm-biodata-training

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md
docs/: FEATURE_STATUS.md  architecture.md
project/: .env.example  app.py  demo_embedding_search.py  embedding_timing_demo.py  explore_endpoints.py  pyproject.toml  show_endpoint_processing.py  step2_explanation.py
project/data/vectordb/: meta.json
project/data/vectordb/collection/sparql-docs/: storage.sqlite
public/: slides.md
